--- a/composer.json
+++ b/composer.json
@@ -1,26 +1,31 @@
 {
-  "name": "vendor/package",
-  "description": "",
-  "keywords": [],
-  "homepage": "",
+  "name": "primitivesocial/nestio-api-wrapper",
+  "description": "Nestio API Wrapper",
+  "keywords": [
+    "nestio",
+    "api"
+  ],
+  "homepage": "https://primitivesocial.com",
   "license": "MIT",
   "authors": [
     {
-      "name": "",
-      "email": ""
+      "name": "Primitive Social",
+      "email": "hello@primitivesocial.com"
     }
   ],
   "require": {
     "php": ">=5.4.0",
     "illuminate/config": "~5.0",
-    "illuminate/support": "~5.0"
+    "illuminate/support": "~5.0",
+    "guzzlehttp/guzzle": "^6.3"
   },
   "require-dev": {
-    "phpunit/phpunit": "~4.0"
+    "phpunit/phpunit": "~4.0",
+    "sempro/phpunit-pretty-print": "^1.0",
   },
   "autoload": {
     "psr-4": {
-      "Vendor\\Package\\": "src/"
+      "PrimitiveSocial\\NestioApiWrapper\\": "src/"
     }
   },
   "minimum-stability": "dev"
