--- a/composer.json
+++ b/composer.json
@@ -17,15 +17,33 @@
     "php": ">=5.4.0",
     "illuminate/config": "~5.0",
     "illuminate/support": "~5.0",
+    "nesbot/carbon": "1.25.*",
     "guzzlehttp/guzzle": "^6.3"
   },
   "require-dev": {
     "phpunit/phpunit": "~4.0",
     "sempro/phpunit-pretty-print": "^1.0",
+    "mockery/mockery": "^1.1",
+    "orchestra/testbench": "~3.0"
   },
   "autoload": {
     "psr-4": {
       "PrimitiveSocial\\NestioApiWrapper\\": "src/"
+    }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "PrimitiveSocial\\NestioApiWrapper\\Tests\\": "tests"
+    }
+  },
+  "extra": {
+    "laravel": {
+      "providers": [
+        "PrimitiveSocial\\NestioApiWrapper\\ServiceProvider"
+      ],
+      "aliases": {
+        "NestioApiWrapper": "PrimitiveSocial\\NestioApiWrapper\\Facades\\NestioApiWrapper"
+      }
     }
   },
   "minimum-stability": "dev"
