--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     "php": ">=7.1.0",
     "illuminate/config": "~5.0",
     "illuminate/support": "~5.0",
-    "nesbot/carbon": "1.25.*",
+    "nesbot/carbon": "^2.20",
     "guzzlehttp/guzzle": "^6.3"
   },
   "require-dev": {
