--- a/composer.json
+++ b/composer.json
@@ -1,51 +1,55 @@
 {
-  "name": "primitivesocial/nestio-api-wrapper",
-  "description": "Nestio API Wrapper",
-  "keywords": [
-    "nestio",
-    "api"
-  ],
-  "homepage": "https://primitivesocial.com",
-  "license": "MIT",
-  "authors": [
-    {
-      "name": "Primitive Social",
-      "email": "hello@primitivesocial.com",
-      "homepage": "https://primitivesocial.com"
+    "name": "primitivesocial/nestio-api-wrapper",
+    "description": "Nestio API Wrapper",
+    "keywords": [
+        "nestio",
+        "api"
+    ],
+    "homepage": "https://primitivesocial.com",
+    "license": "MIT",
+    "authors": [
+        {
+            "name": "Primitive Social",
+            "email": "hello@primitivesocial.com",
+            "homepage": "https://primitivesocial.com"
+        }
+    ],
+    "require": {
+        "php": ">=7.1.0",
+        "illuminate/config": "~5.0",
+        "illuminate/support": "~5.0",
+        "guzzlehttp/guzzle": "^6.3"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "~8.0",
+        "sempro/phpunit-pretty-print": "^1.0",
+        "mockery/mockery": "^1.1",
+        "orchestra/testbench": "~3.0"
+    },
+    "autoload": {
+        "psr-4": {
+            "PrimitiveSocial\\NestioApiWrapper\\": "src/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "PrimitiveSocial\\NestioApiWrapper\\Tests\\": "tests"
+        }
+    },
+    "extra": {
+        "laravel": {
+            "providers": [
+                "PrimitiveSocial\\NestioApiWrapper\\ServiceProvider"
+            ],
+            "aliases": {
+                "NestioApiWrapper": "PrimitiveSocial\\NestioApiWrapper\\Facades\\NestioApiWrapper"
+            }
+        }
+    },
+    "minimum-stability": "dev",
+    "config": {
+        "allow-plugins": {
+            "kylekatarnls/update-helper": true
+        }
     }
-  ],
-  "require": {
-    "php": ">=7.1.0",
-    "illuminate/config": "~5.0",
-    "illuminate/support": "~5.0",
-    "nesbot/carbon": "^1.39",
-    "guzzlehttp/guzzle": "^6.3"
-  },
-  "require-dev": {
-    "phpunit/phpunit": "~8.0",
-    "sempro/phpunit-pretty-print": "^1.0",
-    "mockery/mockery": "^1.1",
-    "orchestra/testbench": "~3.0"
-  },
-  "autoload": {
-    "psr-4": {
-      "PrimitiveSocial\\NestioApiWrapper\\": "src/"
-    }
-  },
-  "autoload-dev": {
-    "psr-4": {
-      "PrimitiveSocial\\NestioApiWrapper\\Tests\\": "tests"
-    }
-  },
-  "extra": {
-    "laravel": {
-      "providers": [
-        "PrimitiveSocial\\NestioApiWrapper\\ServiceProvider"
-      ],
-      "aliases": {
-        "NestioApiWrapper": "PrimitiveSocial\\NestioApiWrapper\\Facades\\NestioApiWrapper"
-      }
-    }
-  },
-  "minimum-stability": "dev"
 }
